Translation updates after feature update

--- a/app/translations/ca/core.json
+++ b/app/translations/ca/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Contrasenya",
     "installation.signup.language.label": "Idioma",
     "installation.signup.button": "Crea la teva compta",
-    "login": "Entrar",
-    "login.welcome": "Identifique't amb la teva nova compta",
+    "login": "Log in",
+    "login.welcome": "Please log in with your new account",
     "login.username.label": "Nom d'usuari",
     "login.password.label": "Contrasenya",
     "login.error": "Nom d'usuari o contrasenya incorrectes",
-    "login.button": "Entrar",
+    "login.button": "Log in",
     "login.log.error.permissions": "L'arxiu de log de Login no té permís d'escriptura",
-    "logout": "Tancar sessió",
+    "logout": "Log out",
     "topbar.error.class.definition": "La definició del topbar no s'ha trobat per a la classe:",
     "dashboard": "Escriptori",
     "dashboard.index.pages.title": "Pàgines",
@@ -64,6 +64,7 @@
     "site.delete.error": "La web no es pot eliminar",
     "pages.show.settings": "Configuració de la pàgina",
     "pages.show.preview": "Obrir vista prèvia",
+    "pages.show.template": "Plantilla",
     "pages.show.changeurl": "Canviar URL",
     "pages.show.invisible": "Estat: invisible",
     "pages.show.visible": "Estat: visible",
@@ -103,6 +104,12 @@
     "pages.url.error.move": "L'apèndix no es pot modificar",
     "pages.url.error.rights": "No pots canviar la URL d'aquest pàgina",
     "pages.url.home.error.error": "La URL de la pàgina d'inici i de la pàgina d'error no es pot modificar",
+    "pages.template.select.label": "Plantilla",
+    "pages.template.warning.text": "The following fields will change, when you switch the template",
+    "pages.template.warning.removed": "Removed fields",
+    "pages.template.warning.replaced": "Replaced fields",
+    "pages.template.warning.added": "Added fields",
+    "pages.template.error": "The template for this page cannot be changed",
     "pages.toggle.position": "Posició",
     "pages.toggle.invisible": "invisible",
     "pages.toggle.publish": "Estàs segur de canviar l'estat de la pàgina a **visible**?",
