--- a/app/translations/da/core.json
+++ b/app/translations/da/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Adgangskode",
     "installation.signup.language.label": "Sprog",
     "installation.signup.button": "Opret din konto",
-    "login": "Log ind",
-    "login.welcome": "Log venligst ind med din nye konto",
+    "login": "Log in",
+    "login.welcome": "Please log in with your new account",
     "login.username.label": "Brugernavn",
     "login.password.label": "Adgangskode",
     "login.error": "Ugyldigt brugernavn eller adgangskode",
-    "login.button": "Log ind",
+    "login.button": "Log in",
     "login.log.error.permissions": "Login log fil er ikke skrivbar",
-    "logout": "Log ud",
+    "logout": "Log out",
     "topbar.error.class.definition": "Mangler topbar definition for class:",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Sider",
@@ -64,6 +64,7 @@
     "site.delete.error": "Sitet kan ikke slettes",
     "pages.show.settings": "Side indstillinger",
     "pages.show.preview": "Se eksempel",
+    "pages.show.template": "Skabelon",
     "pages.show.changeurl": "Ændre URL",
     "pages.show.invisible": "Status: usynlig",
     "pages.show.visible": "Status: synlig",
@@ -103,6 +104,12 @@
     "pages.url.error.move": "URL-appendikset kunne ikke ændres",
     "pages.url.error.rights": "Du kan ikke ændre denne sides URL",
     "pages.url.home.error.error": "URLen for forside og fejl side kan ikke ændres",
+    "pages.template.select.label": "Skabelon",
+    "pages.template.warning.text": "The following fields will change, when you switch the template",
+    "pages.template.warning.removed": "Removed fields",
+    "pages.template.warning.replaced": "Replaced fields",
+    "pages.template.warning.added": "Added fields",
+    "pages.template.error": "The template for this page cannot be changed",
     "pages.toggle.position": "Position",
     "pages.toggle.invisible": "usynlig",
     "pages.toggle.publish": "Ønsker du virkelig at ændre denne sides status til **synlig?**",
