--- a/app/translations/fr/core.json
+++ b/app/translations/fr/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Mot de passe",
     "installation.signup.language.label": "Langue",
     "installation.signup.button": "Créer votre compte",
-    "login": "Connexion",
-    "login.welcome": "Veuillez vous authentifier avec votre nouveau compte",
+    "login": "Log in",
+    "login.welcome": "Please log in with your new account",
     "login.username.label": "Identifiant",
     "login.password.label": "Mot de passe",
     "login.error": "Identifiant ou mot de passe incorrect",
-    "login.button": "Connexion",
+    "login.button": "Log in",
     "login.log.error.permissions": "Le journal de connexion n’est pas accessible en écriture.",
-    "logout": "Déconnexion",
+    "logout": "Log out",
     "topbar.error.class.definition": "Définition de topbar manquante pour la classe : ",
     "dashboard": "Tableau de bord",
     "dashboard.index.pages.title": "Pages",
@@ -64,6 +64,7 @@
     "site.delete.error": "Le site ne peut être supprimé",
     "pages.show.settings": "Options de la page",
     "pages.show.preview": "Prévisualiser",
+    "pages.show.template": "Modèle de page",
     "pages.show.changeurl": "Modifier l’URL",
     "pages.show.invisible": "Statut: invisible",
     "pages.show.visible": "Statut: visible",
@@ -103,6 +104,12 @@
     "pages.url.error.move": "L’identifiant de l’URL n’a pu être changé",
     "pages.url.error.rights": "Vous ne pouvez pas modifier l’URL de cette page",
     "pages.url.home.error.error": "L’URL de la page d’accueil et de la page d’erreur ne peut être modifiée",
+    "pages.template.select.label": "Modèle de page",
+    "pages.template.warning.text": "The following fields will change, when you switch the template",
+    "pages.template.warning.removed": "Removed fields",
+    "pages.template.warning.replaced": "Replaced fields",
+    "pages.template.warning.added": "Added fields",
+    "pages.template.error": "The template for this page cannot be changed",
     "pages.toggle.position": "Position",
     "pages.toggle.invisible": "invisible",
     "pages.toggle.publish": "Voulez-vous vraiment modifier le statut de cette page en **visible**?",
