--- a/app/translations/nl/core.json
+++ b/app/translations/nl/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Wachtwoord",
     "installation.signup.language.label": "Taal",
     "installation.signup.button": "Maak account aan",
-    "login": "Login",
-    "login.welcome": "Login met je gebruikersnaam en wachtwoord",
+    "login": "Log in",
+    "login.welcome": "Please log in with your new account",
     "login.username.label": "Gebruikersnaam",
     "login.password.label": "Wachtwoord",
     "login.error": "Ongeldige gebruikersnaam of wachtwoord",
-    "login.button": "Login",
+    "login.button": "Log in",
     "login.log.error.permissions": "Login logbestand heeft geen schrijfrecht.",
-    "logout": "Uitloggen",
+    "logout": "Log out",
     "topbar.error.class.definition": "Ontbrekende 'topbar definition' voor class:",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Pagina's",
@@ -64,6 +64,7 @@
     "site.delete.error": "De site kan niet worden verwijderd",
     "pages.show.settings": "Pagina opties",
     "pages.show.preview": "Open voorbeeld",
+    "pages.show.template": "Template",
     "pages.show.changeurl": "Verander URL",
     "pages.show.invisible": "Status: onzichtbaar",
     "pages.show.visible": "Status: zichtbaar",
@@ -103,6 +104,12 @@
     "pages.url.error.move": "De URL-toevoeging kan niet worden gewijzigd",
     "pages.url.error.rights": "Je kunt de URL van deze pagina niet wijzigen",
     "pages.url.home.error.error": "De URL voor home en error-pagina's kan niet worden gewijzigd",
+    "pages.template.select.label": "Template",
+    "pages.template.warning.text": "The following fields will change, when you switch the template",
+    "pages.template.warning.removed": "Removed fields",
+    "pages.template.warning.replaced": "Replaced fields",
+    "pages.template.warning.added": "Added fields",
+    "pages.template.error": "The template for this page cannot be changed",
     "pages.toggle.position": "Positie",
     "pages.toggle.invisible": "Onzichtbaar",
     "pages.toggle.publish": "Wil je de status wijzigen naar **zichtbaar**?",
