--- a/app/translations/pt_BR/core.json
+++ b/app/translations/pt_BR/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Senha",
     "installation.signup.language.label": "Idioma",
     "installation.signup.button": "Crie sua conta",
-    "login": "Entrar",
-    "login.welcome": "Favor ingressar com sua nova conta",
+    "login": "Log in",
+    "login.welcome": "Please log in with your new account",
     "login.username.label": "Usuário",
     "login.password.label": "Senha",
     "login.error": "Usuário ou senha inválido",
-    "login.button": "Entrar",
+    "login.button": "Log in",
     "login.log.error.permissions": "O arquivo de log do login não tem permissão de escrita ",
-    "logout": "Sair",
+    "logout": "Log out",
     "topbar.error.class.definition": "Definição \"topbar\" não existe para classe: ",
     "dashboard": "Painel",
     "dashboard.index.pages.title": "Páginas",
@@ -64,6 +64,7 @@
     "site.delete.error": "Este site não pode ser deletado",
     "pages.show.settings": "Configurações de página",
     "pages.show.preview": "Abrir preview",
+    "pages.show.template": "Template",
     "pages.show.changeurl": "Mudar URL",
     "pages.show.invisible": "Status: invisível",
     "pages.show.visible": "Status: visível",
@@ -103,6 +104,12 @@
     "pages.url.error.move": "O apêndice não pôde ser alterado",
     "pages.url.error.rights": "Você não pode alterar a URL desta página",
     "pages.url.home.error.error": "As URLs das páginas \"home\" e \"error\" não podem ser alteradas",
+    "pages.template.select.label": "Template",
+    "pages.template.warning.text": "The following fields will change, when you switch the template",
+    "pages.template.warning.removed": "Removed fields",
+    "pages.template.warning.replaced": "Replaced fields",
+    "pages.template.warning.added": "Added fields",
+    "pages.template.error": "The template for this page cannot be changed",
     "pages.toggle.position": "Posição",
     "pages.toggle.invisible": "Invisível",
     "pages.toggle.publish": "Quer mesmo mudar o status desta página para **visível?**",
