--- a/app/translations/ar/core.json
+++ b/app/translations/ar/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "كلمة المرور",
     "installation.signup.language.label": "اللغة",
     "installation.signup.button": "إنشاء الحساب",
-    "login": "تسجيل الدخول",
-    "login.welcome": "فضلاً سجل الدخول باستخدام حسابك",
+    "login": "Log in",
+    "login.welcome": "Please log in with your new account",
     "login.username.label": "اسم المستخدم",
     "login.password.label": "كلمة المرور",
     "login.error": "خطأ في اسم المستخدم أو كلمة المرور",
-    "login.button": "دخول",
+    "login.button": "Log in",
     "login.log.error.permissions": "Login log file is not writable.",
-    "logout": "خروج",
+    "logout": "Log out",
     "topbar.error.class.definition": "Missing topbar definition for class:",
     "dashboard": "لوحة التحكم",
     "dashboard.index.pages.title": "الصفحات",
@@ -64,6 +64,7 @@
     "site.delete.error": "The site cannot be deleted",
     "pages.show.settings": "إعدادات الصفحة",
     "pages.show.preview": "عرض المعاينة",
+    "pages.show.template": "القالب",
     "pages.show.changeurl": "تغيير الوصلة",
     "pages.show.invisible": "Status: invisible",
     "pages.show.visible": "Status: visible",
@@ -103,6 +104,12 @@
     "pages.url.error.move": "لم يكن بالإمكان تغيير الوصلة",
     "pages.url.error.rights": "You cannot change the URL of this page",
     "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
+    "pages.template.select.label": "القالب",
+    "pages.template.warning.text": "The following fields will change, when you switch the template",
+    "pages.template.warning.removed": "Removed fields",
+    "pages.template.warning.replaced": "Replaced fields",
+    "pages.template.warning.added": "Added fields",
+    "pages.template.error": "The template for this page cannot be changed",
     "pages.toggle.position": "Position",
     "pages.toggle.invisible": "invisible",
     "pages.toggle.publish": "Do you really want to change the status of this page to **visible?**",
