--- a/app/translations/bg/core.json
+++ b/app/translations/bg/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Парола",
     "installation.signup.language.label": "Език",
     "installation.signup.button": "Създайте своя акаунт",
-    "login": "Подписване",
-    "login.welcome": "Моля, подпишете се с Вашия нов акаунт.",
+    "login": "Log in",
+    "login.welcome": "Please log in with your new account",
     "login.username.label": "Потребителско име",
     "login.password.label": "Парола",
     "login.error": "Невалидно потребитебско име или парола",
-    "login.button": "Подписване",
+    "login.button": "Log in",
     "login.log.error.permissions": "Лог файла за влизанията не е записваем",
-    "logout": "Отписване",
+    "logout": "Log out",
     "topbar.error.class.definition": "липсва topbar definition за клас:",
     "dashboard": "Табло",
     "dashboard.index.pages.title": "Страници",
@@ -64,6 +64,7 @@
     "site.delete.error": "Сайтът не може да се изтрие",
     "pages.show.settings": "Настройки за страницата",
     "pages.show.preview": "Отвори предварителен преглед",
+    "pages.show.template": "Модел",
     "pages.show.changeurl": "Промени URL",
     "pages.show.invisible": "Статус: Невидимо",
     "pages.show.visible": "Статус: Видимо",
@@ -103,6 +104,12 @@
     "pages.url.error.move": "Добавката не може да се променя",
     "pages.url.error.rights": "Не можете да смените URL за тази страница",
     "pages.url.home.error.error": "URL на HOME страницата и ERROR страницата не могат да се променят",
+    "pages.template.select.label": "Модел",
+    "pages.template.warning.text": "The following fields will change, when you switch the template",
+    "pages.template.warning.removed": "Removed fields",
+    "pages.template.warning.replaced": "Replaced fields",
+    "pages.template.warning.added": "Added fields",
+    "pages.template.error": "The template for this page cannot be changed",
     "pages.toggle.position": "Позиция",
     "pages.toggle.invisible": "Невидим",
     "pages.toggle.publish": "Наистина ли искате да смените статуса на тази страница на **Видим?**",
