--- a/app/translations/fa/core.json
+++ b/app/translations/fa/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "گذرواژه",
     "installation.signup.language.label": "زبان",
     "installation.signup.button": "ایجاد حساب کاربری",
-    "login": "ورود",
-    "login.welcome": "لطفا وارد شوید",
+    "login": "Log in",
+    "login.welcome": "Please log in with your new account",
     "login.username.label": "نام کاربری",
     "login.password.label": "گذرواژه",
     "login.error": "نام کاربری یا گذرواژه صحیح نیست",
-    "login.button": "ورود",
+    "login.button": "Log in",
     "login.log.error.permissions": "فایل تاریخچه ورود کاربران غیرقابل نوشتن است",
-    "logout": "خروج",
+    "logout": "Log out",
     "topbar.error.class.definition": "topbar برای کلاس تعریف نشده است:",
     "dashboard": "پیشخوان",
     "dashboard.index.pages.title": "صفحات",
@@ -64,6 +64,7 @@
     "site.delete.error": "حذف سایت ممکن نیست",
     "pages.show.settings": "تنظیمات صفحه",
     "pages.show.preview": "پیش نمایش",
+    "pages.show.template": "قالب صفحه",
     "pages.show.changeurl": "تغییر نشانی اینترنتی صفحه",
     "pages.show.invisible": "وضعیت: مخفی",
     "pages.show.visible": "وضعیت: قابل مشاهده",
@@ -103,6 +104,12 @@
     "pages.url.error.move": "پیوست تغییر نکرد",
     "pages.url.error.rights": "شما امکان تغییر آدرس این صفحه را ندارید",
     "pages.url.home.error.error": "آدرس صفحه اصلی و صفحه خطا غیر قابل تغییر است",
+    "pages.template.select.label": "قالب صفحه",
+    "pages.template.warning.text": "The following fields will change, when you switch the template",
+    "pages.template.warning.removed": "Removed fields",
+    "pages.template.warning.replaced": "Replaced fields",
+    "pages.template.warning.added": "Added fields",
+    "pages.template.error": "The template for this page cannot be changed",
     "pages.toggle.position": "موقعیت",
     "pages.toggle.invisible": "مخفی",
     "pages.toggle.publish": "آیااز تغییر وضعیت صفحه به **قابل مشاهده** مطمئن هستید؟",
