--- a/app/translations/tr/core.json
+++ b/app/translations/tr/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Şifre",
     "installation.signup.language.label": "Dil",
     "installation.signup.button": "Hesabını oluştur",
-    "login": "Giriş",
-    "login.welcome": "Lütfen yeni hesabın ile giriş yap",
+    "login": "Log in",
+    "login.welcome": "Please log in with your new account",
     "login.username.label": "Kullanıcı Adı",
     "login.password.label": "Şifre",
     "login.error": "Geçersiz kullanıcı adı veya şifre",
-    "login.button": "Giriş Yap",
+    "login.button": "Log in",
     "login.log.error.permissions": "Giriş günlük kayıt dosyası yazılabilir değil",
-    "logout": "Çıkış Yap",
+    "logout": "Log out",
     "topbar.error.class.definition": "Sınıfın üstbar tanımlaması eksik:",
     "dashboard": "Kontrol Paneli",
     "dashboard.index.pages.title": "Sayfalar",
@@ -64,6 +64,7 @@
     "site.delete.error": "Site silinemez",
     "pages.show.settings": "Sayfa ayarları",
     "pages.show.preview": "Önizlemeyi aç",
+    "pages.show.template": "Şablon",
     "pages.show.changeurl": "Web adresini değiştir",
     "pages.show.invisible": "Durum: görünmez",
     "pages.show.visible": "Durum: görünür",
@@ -103,6 +104,12 @@
     "pages.url.error.move": "Web adres-uzantısı değiştirilemedi",
     "pages.url.error.rights": "Bu sayfanın adresini değiştirilemez",
     "pages.url.home.error.error": "Anasayfa ve hata sayfalarının adresleri değiştirilemez",
+    "pages.template.select.label": "Şablon",
+    "pages.template.warning.text": "The following fields will change, when you switch the template",
+    "pages.template.warning.removed": "Removed fields",
+    "pages.template.warning.replaced": "Replaced fields",
+    "pages.template.warning.added": "Added fields",
+    "pages.template.error": "The template for this page cannot be changed",
     "pages.toggle.position": "Pozisyon",
     "pages.toggle.invisible": "görünmez",
     "pages.toggle.publish": "Bu sayfanın durumunu **görünür** olarak değiştirmek istediğinizden emin misiniz?",
