--- a/app/translations/ar/core.json
+++ b/app/translations/ar/core.json
@@ -31,12 +31,12 @@
     "installation.signup.password.label": "كلمة المرور",
     "installation.signup.language.label": "اللغة",
     "installation.signup.button": "إنشاء الحساب",
-    "login": "Log in",
-    "login.welcome": "Please log in with your new account",
+    "login": "تسجيل الدخول",
+    "login.welcome": "فضلاً سجل الدخول باستخدام حسابك",
     "login.username.label": "اسم المستخدم",
     "login.password.label": "كلمة المرور",
     "login.error": "خطأ في اسم المستخدم أو كلمة المرور",
-    "login.button": "Log in",
+    "login.button": "تسجيل الدخول",
     "login.log.error.permissions": "Login log file is not writable.",
     "logout": "Log out",
     "topbar.error.class.definition": "Missing topbar definition for class:",
