--- a/app/translations/bg/core.json
+++ b/app/translations/bg/core.json
@@ -31,7 +31,7 @@
     "installation.signup.password.label": "Парола",
     "installation.signup.language.label": "Език",
     "installation.signup.button": "Създайте своя акаунт",
-    "login": "Log in",
+    "login": "Подписване",
     "login.welcome": "Please log in with your new account",
     "login.username.label": "Потребителско име",
     "login.password.label": "Парола",
