--- a/app/translations/ca/core.json
+++ b/app/translations/ca/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Contrasenya",
     "installation.signup.language.label": "Idioma",
     "installation.signup.button": "Crea la teva compta",
-    "login": "Log in",
-    "login.welcome": "Please log in with your new account",
+    "login": "Entrar",
+    "login.welcome": "Entra amb la teva nova compta",
     "login.username.label": "Nom d'usuari",
     "login.password.label": "Contrasenya",
     "login.error": "Nom d'usuari o contrasenya incorrectes",
-    "login.button": "Log in",
+    "login.button": "Entrar",
     "login.log.error.permissions": "L'arxiu de log de Login no té permís d'escriptura",
-    "logout": "Log out",
+    "logout": "Tancar sessió",
     "topbar.error.class.definition": "La definició del topbar no s'ha trobat per a la classe:",
     "dashboard": "Escriptori",
     "dashboard.index.pages.title": "Pàgines",
@@ -105,11 +105,11 @@
     "pages.url.error.rights": "No pots canviar la URL d'aquest pàgina",
     "pages.url.home.error.error": "La URL de la pàgina d'inici i de la pàgina d'error no es pot modificar",
     "pages.template.select.label": "Plantilla",
-    "pages.template.warning.text": "The following fields will change, when you switch the template",
-    "pages.template.warning.removed": "Removed fields",
-    "pages.template.warning.replaced": "Replaced fields",
-    "pages.template.warning.added": "Added fields",
-    "pages.template.error": "The template for this page cannot be changed",
+    "pages.template.warning.text": "Els següents camps canviaran quan canviïs de plantilla",
+    "pages.template.warning.removed": "Eliminar camps",
+    "pages.template.warning.replaced": "Reemplaçar camps",
+    "pages.template.warning.added": "Camps afegits",
+    "pages.template.error": "La plantilla d'aquesta pàgina no es pot canviar",
     "pages.toggle.position": "Posició",
     "pages.toggle.invisible": "invisible",
     "pages.toggle.publish": "Estàs segur de canviar l'estat de la pàgina a **visible**?",
