--- a/app/translations/da/core.json
+++ b/app/translations/da/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Adgangskode",
     "installation.signup.language.label": "Sprog",
     "installation.signup.button": "Opret din konto",
-    "login": "Log in",
-    "login.welcome": "Please log in with your new account",
+    "login": "Log ind",
+    "login.welcome": "Log ind med din nye konto",
     "login.username.label": "Brugernavn",
     "login.password.label": "Adgangskode",
     "login.error": "Ugyldigt brugernavn eller adgangskode",
-    "login.button": "Log in",
+    "login.button": "Log ind",
     "login.log.error.permissions": "Login log fil er ikke skrivbar",
-    "logout": "Log out",
+    "logout": "Log ud",
     "topbar.error.class.definition": "Mangler topbar definition for class:",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Sider",
@@ -105,11 +105,11 @@
     "pages.url.error.rights": "Du kan ikke ændre denne sides URL",
     "pages.url.home.error.error": "URLen for forside og fejl side kan ikke ændres",
     "pages.template.select.label": "Skabelon",
-    "pages.template.warning.text": "The following fields will change, when you switch the template",
-    "pages.template.warning.removed": "Removed fields",
-    "pages.template.warning.replaced": "Replaced fields",
-    "pages.template.warning.added": "Added fields",
-    "pages.template.error": "The template for this page cannot be changed",
+    "pages.template.warning.text": "Følgende felter ændres, hvis du skifter skabelon",
+    "pages.template.warning.removed": "Fjernede felter",
+    "pages.template.warning.replaced": "Erstattede felter",
+    "pages.template.warning.added": "Tilføjede felter",
+    "pages.template.error": "Skabelonen for denne side kan ikke ændres",
     "pages.toggle.position": "Position",
     "pages.toggle.invisible": "usynlig",
     "pages.toggle.publish": "Ønsker du virkelig at ændre denne sides status til **synlig?**",
