--- a/app/translations/fr/core.json
+++ b/app/translations/fr/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Mot de passe",
     "installation.signup.language.label": "Langue",
     "installation.signup.button": "Créer votre compte",
-    "login": "Log in",
-    "login.welcome": "Please log in with your new account",
+    "login": "Connexion",
+    "login.welcome": "Veuillez vous identifier avec votre nouveau compte",
     "login.username.label": "Identifiant",
     "login.password.label": "Mot de passe",
     "login.error": "Identifiant ou mot de passe incorrect",
-    "login.button": "Log in",
+    "login.button": "Connexion",
     "login.log.error.permissions": "Le journal de connexion n’est pas accessible en écriture.",
-    "logout": "Log out",
+    "logout": "Déconnexion",
     "topbar.error.class.definition": "Définition de topbar manquante pour la classe : ",
     "dashboard": "Tableau de bord",
     "dashboard.index.pages.title": "Pages",
@@ -66,8 +66,8 @@
     "pages.show.preview": "Prévisualiser",
     "pages.show.template": "Modèle de page",
     "pages.show.changeurl": "Modifier l’URL",
-    "pages.show.invisible": "Statut: invisible",
-    "pages.show.visible": "Statut: visible",
+    "pages.show.invisible": "Statut : invisible",
+    "pages.show.visible": "Statut : visible",
     "pages.show.changes.text": "Vous avez des modifications non enregistrées !",
     "pages.show.changes.button": "Les supprimer",
     "pages.show.delete": "Supprimer cette page",
@@ -105,11 +105,11 @@
     "pages.url.error.rights": "Vous ne pouvez pas modifier l’URL de cette page",
     "pages.url.home.error.error": "L’URL de la page d’accueil et de la page d’erreur ne peut être modifiée",
     "pages.template.select.label": "Modèle de page",
-    "pages.template.warning.text": "The following fields will change, when you switch the template",
-    "pages.template.warning.removed": "Removed fields",
-    "pages.template.warning.replaced": "Replaced fields",
-    "pages.template.warning.added": "Added fields",
-    "pages.template.error": "The template for this page cannot be changed",
+    "pages.template.warning.text": "Les champs suivants seront modifiés si vous changez de modèle de page",
+    "pages.template.warning.removed": "Champs supprimés",
+    "pages.template.warning.replaced": "Champs remplacés",
+    "pages.template.warning.added": "Champs ajoutés",
+    "pages.template.error": "Le modèle de cette page ne peut être changé",
     "pages.toggle.position": "Position",
     "pages.toggle.invisible": "invisible",
     "pages.toggle.publish": "Voulez-vous vraiment modifier le statut de cette page en **visible**?",
@@ -130,7 +130,7 @@
     "subpages": "Pages",
     "subpages.index.headline": "Pages dans",
     "subpages.index.back": "Retour",
-    "subpages.index.add": "Ajouter",
+    "subpages.index.add": "Ajouter une nouvelle page",
     "subpages.index.add.first.text": "Cette page n’a pas encore de page secondaire",
     "subpages.index.add.first.button": "Ajouter une première page",
     "subpages.index.visible": "Pages visibles",
