--- a/app/translations/nl/core.json
+++ b/app/translations/nl/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Wachtwoord",
     "installation.signup.language.label": "Taal",
     "installation.signup.button": "Maak account aan",
-    "login": "Log in",
-    "login.welcome": "Please log in with your new account",
+    "login": "Inloggen",
+    "login.welcome": "Log in met je nieuwe account",
     "login.username.label": "Gebruikersnaam",
     "login.password.label": "Wachtwoord",
     "login.error": "Ongeldige gebruikersnaam of wachtwoord",
-    "login.button": "Log in",
+    "login.button": "Inloggen",
     "login.log.error.permissions": "Login logbestand heeft geen schrijfrecht.",
-    "logout": "Log out",
+    "logout": "Uitloggen",
     "topbar.error.class.definition": "Ontbrekende 'topbar definition' voor class:",
     "dashboard": "Dashboard",
     "dashboard.index.pages.title": "Pagina's",
@@ -105,11 +105,11 @@
     "pages.url.error.rights": "Je kunt de URL van deze pagina niet wijzigen",
     "pages.url.home.error.error": "De URL voor home en error-pagina's kan niet worden gewijzigd",
     "pages.template.select.label": "Template",
-    "pages.template.warning.text": "The following fields will change, when you switch the template",
-    "pages.template.warning.removed": "Removed fields",
-    "pages.template.warning.replaced": "Replaced fields",
-    "pages.template.warning.added": "Added fields",
-    "pages.template.error": "The template for this page cannot be changed",
+    "pages.template.warning.text": "De volgende velden veranderen, als je de template wijzigt.",
+    "pages.template.warning.removed": "Verwijderde velden",
+    "pages.template.warning.replaced": "Vervangen velden",
+    "pages.template.warning.added": "Toegevoegde velden",
+    "pages.template.error": "De template voor deze pagina kan niet worden gewijzigd",
     "pages.toggle.position": "Positie",
     "pages.toggle.invisible": "Onzichtbaar",
     "pages.toggle.publish": "Wil je de status wijzigen naar **zichtbaar**?",
