--- a/app/translations/tr/core.json
+++ b/app/translations/tr/core.json
@@ -31,14 +31,14 @@
     "installation.signup.password.label": "Şifre",
     "installation.signup.language.label": "Dil",
     "installation.signup.button": "Hesabını oluştur",
-    "login": "Log in",
-    "login.welcome": "Please log in with your new account",
+    "login": "Giriş",
+    "login.welcome": "Lütfen yeni hesabınız ile giriş yapın",
     "login.username.label": "Kullanıcı Adı",
     "login.password.label": "Şifre",
     "login.error": "Geçersiz kullanıcı adı veya şifre",
-    "login.button": "Log in",
+    "login.button": "Giriş",
     "login.log.error.permissions": "Giriş günlük kayıt dosyası yazılabilir değil",
-    "logout": "Log out",
+    "logout": "Güvenli çıkış",
     "topbar.error.class.definition": "Sınıfın üstbar tanımlaması eksik:",
     "dashboard": "Kontrol Paneli",
     "dashboard.index.pages.title": "Sayfalar",
@@ -105,11 +105,11 @@
     "pages.url.error.rights": "Bu sayfanın adresini değiştirilemez",
     "pages.url.home.error.error": "Anasayfa ve hata sayfalarının adresleri değiştirilemez",
     "pages.template.select.label": "Şablon",
-    "pages.template.warning.text": "The following fields will change, when you switch the template",
-    "pages.template.warning.removed": "Removed fields",
-    "pages.template.warning.replaced": "Replaced fields",
-    "pages.template.warning.added": "Added fields",
-    "pages.template.error": "The template for this page cannot be changed",
+    "pages.template.warning.text": "Şablonu değiştirdiğinizde ilgili alanlar da güncellenecek",
+    "pages.template.warning.removed": "Kaldırılan alanlar",
+    "pages.template.warning.replaced": "Değiştirilen alanlar",
+    "pages.template.warning.added": "Eklenen alanlar",
+    "pages.template.error": "Bu sayfa için şablon değiştirilemez",
     "pages.toggle.position": "Pozisyon",
     "pages.toggle.invisible": "görünmez",
     "pages.toggle.publish": "Bu sayfanın durumunu **görünür** olarak değiştirmek istediğinizden emin misiniz?",
