Blocked panel installer on public servers

--- a/app/translations/fa/core.json
+++ b/app/translations/fa/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "کربی در هنگام نصب با موارد زیر روبرو شده است…",
     "installation.check.retry": "تلاش مجدد",
     "installation.check.error": "مشکلی رخ داده است!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts قابل نوشتن نیست",
     "installation.check.error.avatars": "/assets/avatars قابل نوشتن نیست",
     "installation.check.error.blueprints": "لطفا پوشه /site/blueprints را ایجاد کنید",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "یک صفحه با پیوست مشابه در حال حاضر وجود دارد",
     "pages.url.error.move": "پیوست تغییر نکرد",
     "pages.url.error.rights": "شما امکان تغییر آدرس این صفحه را ندارید",
-    "pages.url.home.error.error": "آدرس صفحه اصلی و صفحه خطا غیر قابل تغییر است",
     "pages.template.select.label": "قالب صفحه",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
