--- a/app/translations/it/core.json
+++ b/app/translations/it/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby ha riscontrato i seguenti problemi durante l'installazione…",
     "installation.check.retry": "Riprova",
     "installation.check.error": "Sono stati riscontrati dei problemi!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts non dispone dei permessi di scrittura",
     "installation.check.error.avatars": "/assets/avatars non dispone dei permessi di scrittura",
     "installation.check.error.blueprints": "Aggiungi la cartella /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Esiste già una pagina con lo stesso URL",
     "pages.url.error.move": "L'URL non può essere modificato",
     "pages.url.error.rights": "Non puoi cambiare l'URL di questa pagina",
-    "pages.url.home.error.error": "Gli URL per la home e le pagine di errore non possono essere cambiati",
     "pages.template.select.label": "Template",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
