--- a/app/translations/ro/core.json
+++ b/app/translations/ro/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Sistemul a întâmpinat următoarele probleme în timpul instalării:",
     "installation.check.retry": "Ignoră",
     "installation.check.error": "Sunt câteva probleme!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "Directorul <i>/site/accounts</i> nu are permisiuni de scriere.",
     "installation.check.error.avatars": "Directorul <i>/assets/avatars</i> nu are permisiuni de scriere.",
     "installation.check.error.blueprints": "Creează te rog directorul <i>/site/blueprints</i>!",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Există deja o pagină cu aceeaşi terminaţie URL!",
     "pages.url.error.move": "Terminaţia URL nu poate fi modificată!",
     "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
     "pages.template.select.label": "Tip pagină",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
