--- a/app/translations/zh_TW/core.json
+++ b/app/translations/zh_TW/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby在安裝過程中遇到以下問題…",
     "installation.check.retry": "重試",
     "installation.check.error": "這裡發生了一些問題!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "您沒有「/site/accounts」資料夾的修改權限",
     "installation.check.error.avatars": "您沒有「/assets/avatars」資料夾的修改權限",
     "installation.check.error.blueprints": "請新增「/site/blueprints」資料夾",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "已有重複的頁面網址",
     "pages.url.error.move": "無法更改頁面網址",
     "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
     "pages.template.select.label": "頁面模板",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
