--- a/app/translations/ar/core.json
+++ b/app/translations/ar/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "المشاكل التالية واجهت كيربي أثناء التنصيب…",
     "installation.check.retry": "إعادة المحاولة",
     "installation.check.error": "هناك بعض المشاكل!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "المجلد /site/accounts غير قابل للكتابة",
     "installation.check.error.avatars": "المجلد /assets/avatars غير قابل للكتابة",
     "installation.check.error.blueprints": "فضلا قم بإضافة المجلد /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "توجد صفحة أخرى لها نفس الوصلة",
     "pages.url.error.move": "لم يكن بالإمكان تغيير الوصلة",
     "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
     "pages.template.select.label": "القالب",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
