--- a/app/translations/bg/core.json
+++ b/app/translations/bg/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby откри следните проблеми по време на инсталацията...",
     "installation.check.retry": "Опитай пак",
     "installation.check.error": "Има няколко проблема!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "папката /site/accounts не е записваема",
     "installation.check.error.avatars": "Папката assets/avatars не е записваема",
     "installation.check.error.blueprints": "моля добавете папка /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Страница със същата URL-добавка вече съществува",
     "pages.url.error.move": "Добавката не може да се променя",
     "pages.url.error.rights": "Не можете да смените URL за тази страница",
-    "pages.url.home.error.error": "URL на HOME страницата и ERROR страницата не могат да се променят",
     "pages.template.select.label": "Модел",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
