--- a/app/translations/ca/core.json
+++ b/app/translations/ca/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby ha trobat els següents problemes durant l'instal·lació…",
     "installation.check.retry": "Reintentar",
     "installation.check.error": "Hi ha alguns problemes!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts no té permís d'escriptura",
     "installation.check.error.avatars": "/assets/avatars no té permís d'escriptura",
     "installation.check.error.blueprints": "Afegeix el directori /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Ja existeix una altra pàgina amb el mateix apèndix",
     "pages.url.error.move": "L'apèndix no es pot modificar",
     "pages.url.error.rights": "No pots canviar la URL d'aquest pàgina",
-    "pages.url.home.error.error": "La URL de la pàgina d'inici i de la pàgina d'error no es pot modificar",
     "pages.template.select.label": "Plantilla",
     "pages.template.warning.text": "Els següents camps canviaran quan canviïs de plantilla",
     "pages.template.warning.removed": "Eliminar camps",
