--- a/app/translations/cs/core.json
+++ b/app/translations/cs/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby během instalace narazilo na následující problémy…",
     "installation.check.retry": "Zkusit znovu",
     "installation.check.error": "Nastaly nějaké problémy!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts není zapisovatelné",
     "installation.check.error.avatars": "/assets/avatars není zapisovatelné",
     "installation.check.error.blueprints": "Prosím přidejte složku /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Stránka se stejnou příponou již existuje",
     "pages.url.error.move": "Nepodařilo se změnit příponu",
     "pages.url.error.rights": "Nemůžete změnit URL této stránky",
-    "pages.url.home.error.error": "URL úvodní a chybových stránek nemohou být změněny",
     "pages.template.select.label": "Šablona",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
