--- a/app/translations/da/core.json
+++ b/app/translations/da/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby stødte på følgende problemer under installationen…",
     "installation.check.retry": "Prøv igen",
     "installation.check.error": "Der er nogle problemer!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts er ikke skrivbar",
     "installation.check.error.avatars": "/assets/avatars er ikke skrivbar",
     "installation.check.error.blueprints": "Tilføj venligst en /site/blueprints mappe",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "En side med samme appendiks eksisterer allerede",
     "pages.url.error.move": "URL-appendikset kunne ikke ændres",
     "pages.url.error.rights": "Du kan ikke ændre denne sides URL",
-    "pages.url.home.error.error": "URLen for forside og fejl side kan ikke ændres",
     "pages.template.select.label": "Skabelon",
     "pages.template.warning.text": "Følgende felter ændres, hvis du skifter skabelon",
     "pages.template.warning.removed": "Fjernede felter",
