--- a/app/translations/de/core.json
+++ b/app/translations/de/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby hat die folgenden Probleme festgestellt…",
     "installation.check.retry": "Wiederholen",
     "installation.check.error": "Es gibt einige Probleme!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts ist nicht beschreibbar",
     "installation.check.error.avatars": "/assets/avatars ist nicht beschreibbar",
     "installation.check.error.blueprints": "Bitte lege den Ordner /site/blueprints an",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Eine Seite mit dem selben Anhang besteht bereits.",
     "pages.url.error.move": "Die URL konnte nicht geändert werden",
     "pages.url.error.rights": "Du kannst die URL dieser Seite nicht ändern",
-    "pages.url.home.error.error": "Die URL für die Start- and Fehlerseite kann nicht geändert werden",
     "pages.template.select.label": "Vorlage",
     "pages.template.warning.text": "Folgende Felder werden sich ändern, wenn du die Vorlage wechselst. ",
     "pages.template.warning.removed": "Gelöschte Felder",
