--- a/app/translations/es_419/core.json
+++ b/app/translations/es_419/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby encontró los siguientes errores durante la instalación…",
     "installation.check.retry": "Reintentar",
     "installation.check.error": "¡Tenemos problemas!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts no tine permisos de escritura",
     "installation.check.error.avatars": "/assets/avatars no tine permisos de escritura",
     "installation.check.error.blueprints": "Por favor agrega una carpeta /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Una página con el mismo apéndice-url ya existe",
     "pages.url.error.move": "El apéndice-url no pudo ser cambiado",
     "pages.url.error.rights": "Usted no puede cambiar la URL de esta página",
-    "pages.url.home.error.error": "La URL de las paginas home y error no pueden ser cambiadas",
     "pages.template.select.label": "Plantilla",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
