--- a/app/translations/es_ES/core.json
+++ b/app/translations/es_ES/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby encontró los siguientes errores durante la instalación…",
     "installation.check.retry": "Reintentar",
     "installation.check.error": "¡Hay un problema!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts no tiene permisos de escritura",
     "installation.check.error.avatars": "/assets/avatars no tiene permisos de escritura",
     "installation.check.error.blueprints": "Por favor, crea la carpeta /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Ya existe una página con la misma URL",
     "pages.url.error.move": "No se ha podido cambiar la URL",
     "pages.url.error.rights": "No se puede cambiar la URL de esta página",
-    "pages.url.home.error.error": "No se puede cambiar la URL de las páginas de inicio y error",
     "pages.template.select.label": "Plantilla",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
