--- a/app/translations/fi/core.json
+++ b/app/translations/fi/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby havaitsi seuraavat virheet asennuksen yhteydessä…",
     "installation.check.retry": "Yritä uudelleen",
     "installation.check.error": "Muutama ongelma löytyi!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts edellyttää kirjoitusoikeudet",
     "installation.check.error.avatars": "/assets/avatars edellyttää kirjoitusoikeudet",
     "installation.check.error.blueprints": "Ole hyvä ja lisää /site/blueprints kansio",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Olemassaolevalla sivulla on jo sama URL-pääte",
     "pages.url.error.move": "Päätettä ei voitu muuttaa",
     "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
     "pages.template.select.label": "Sivupohja",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
