--- a/app/translations/fr/core.json
+++ b/app/translations/fr/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Durant l’installation, Kirby a rencontré les problèmes suivants…",
     "installation.check.retry": "Essayer de nouveau",
     "installation.check.error": "Des problèmes on été rencontrés !",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "Le répertoire “/site/accounts” n’est pas accessible en écriture",
     "installation.check.error.avatars": "Le répertoire “/assets/avatars” n’est pas accessible en écriture",
     "installation.check.error.blueprints": "Veuillez ajouter un répertoire “/site/blueprints”",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Une page du même nom existe déjà",
     "pages.url.error.move": "L’identifiant de l’URL n’a pu être changé",
     "pages.url.error.rights": "Vous ne pouvez pas modifier l’URL de cette page",
-    "pages.url.home.error.error": "L’URL de la page d’accueil et de la page d’erreur ne peut être modifiée",
     "pages.template.select.label": "Modèle de page",
     "pages.template.warning.text": "Les champs suivants seront modifiés si vous changez de modèle de page",
     "pages.template.warning.removed": "Champs supprimés",
