--- a/app/translations/hu/core.json
+++ b/app/translations/hu/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby az alábbi problémával találkozott…",
     "installation.check.retry": "Újból",
     "installation.check.error": "Van néhány probléma!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts nem írható",
     "installation.check.error.avatars": "/assets/avatars nem írható",
     "installation.check.error.blueprints": "Kérlek hozd létre a site/blueprints mappát",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Van már egy másik oldal ezzel az URL-lel",
     "pages.url.error.move": "Az URL-t nem sikerült megváltoztatni",
     "pages.url.error.rights": "Ennek az oldalnak nem tudod megváltoztatni az URL-jét",
-    "pages.url.home.error.error": "A főoldal és a hibaoldal URL-je nem változtatható meg",
     "pages.template.select.label": "Sablon",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
