--- a/app/translations/id/core.json
+++ b/app/translations/id/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby menemukan beberapa masalah selagi menginstalasi…",
     "installation.check.retry": "Coba lagi",
     "installation.check.error": "Ada beberapa masalah!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts tidak bisa diakses",
     "installation.check.error.avatars": "/assets/avatars tidak bisa diakses",
     "installation.check.error.blueprints": "Tolong tambahkan folder /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Halaman dengan lampiran yang sama sudah ada",
     "pages.url.error.move": "Lampiran tidak bisa diubah",
     "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
     "pages.template.select.label": "Template",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
