--- a/app/translations/ja/core.json
+++ b/app/translations/ja/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirbyのインストールプロセスで以下の問題が発生しました",
     "installation.check.retry": "リトライ",
     "installation.check.error": "次の項目を確認してください。",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts に書き込み権限がありません",
     "installation.check.error.avatars": "/assets/avatars に書き込み権限がありません",
     "installation.check.error.blueprints": "/site/blueprints フォルダがありません",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "同じページ識別子(URL)を持つページが既に存在しています",
     "pages.url.error.move": "ページ識別子(URL)を変更できませんでした",
     "pages.url.error.rights": "You cannot change the URL of this page",
-    "pages.url.home.error.error": "The URL for the home and error pages cannot be changed",
     "pages.template.select.label": "テンプレート",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
