--- a/app/translations/nl/core.json
+++ b/app/translations/nl/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby vond de volgende fouten tijdens de installatie...",
     "installation.check.retry": "Opnieuw proberen",
     "installation.check.error": "Er zijn een aantal problemen!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts heeft geen schrijfrechten",
     "installation.check.error.avatars": "/assets/avatars heeft geen schrijfrechten",
     "installation.check.error.blueprints": "Voeg een /site/blueprints map toe",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Er bestaat al een pagina met deze URL-toevoeging",
     "pages.url.error.move": "De URL-toevoeging kan niet worden gewijzigd",
     "pages.url.error.rights": "Je kunt de URL van deze pagina niet wijzigen",
-    "pages.url.home.error.error": "De URL voor home en error-pagina's kan niet worden gewijzigd",
     "pages.template.select.label": "Template",
     "pages.template.warning.text": "De volgende velden veranderen, als je de template wijzigt.",
     "pages.template.warning.removed": "Verwijderde velden",
