--- a/app/translations/pl/core.json
+++ b/app/translations/pl/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby napotkał następujące problemy podczas instalacji…",
     "installation.check.retry": "Ponów próbę",
     "installation.check.error": "Wystąpiły jakieś problemy!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts nie ma praw do zapisu",
     "installation.check.error.avatars": "/assets/avatars nie ma praw do zapisu",
     "installation.check.error.blueprints": "Proszę dodać folder /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Strona z takim apendyksem już istnieje",
     "pages.url.error.move": "Apendyks nie mógł zostać zmieniony",
     "pages.url.error.rights": "Nie możesz zmienić adres URL tej strony",
-    "pages.url.home.error.error": "Adres URL dla strony głównej i błędu nie może być zmieniona",
     "pages.template.select.label": "Szablon",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
