--- a/app/translations/pt_PT/core.json
+++ b/app/translations/pt_PT/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby encontrou os seguintes problemas durante a instalação…",
     "installation.check.retry": "Tenta novamente",
     "installation.check.error": "Temos problemas!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts não tem permissão de escrita",
     "installation.check.error.avatars": "/assets/avatars não tem permissão de escrita",
     "installation.check.error.blueprints": "Por favor, adiciona uma pasta /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Já existe uma página com mesmo apêndice",
     "pages.url.error.move": "O apêndice não pôde ser alterado",
     "pages.url.error.rights": "Não é possível mudar o URL desta página",
-    "pages.url.home.error.error": "O URL para as paginas home e erro não pode ser modificado",
     "pages.template.select.label": "Template",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
