--- a/app/translations/ru/core.json
+++ b/app/translations/ru/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Во время установки Kirby возникли следующие проблемы…",
     "installation.check.retry": "Повторить",
     "installation.check.error": "Не все прошло так гладко :(",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts не доступно для записи",
     "installation.check.error.avatars": "/assets/avatars не доступно для записи",
     "installation.check.error.blueprints": "Пожалуйста, создайте папку /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Страница с такой же понятной ссылкой (ЧПУ) уже существует",
     "pages.url.error.move": "Понятная ссылка (ЧПУ) не может быть изменена",
     "pages.url.error.rights": "Вы не можете изменить URL этой страницы",
-    "pages.url.home.error.error": "URL для домашней и страницы ошибки не могут быть изменены",
     "pages.template.select.label": "Шаблон",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
