--- a/app/translations/sv_SE/core.json
+++ b/app/translations/sv_SE/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby påträffade följande fel under installationen…",
     "installation.check.retry": "Försök igen",
     "installation.check.error": "Det finns några problem!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "Mappen /site/accounts saknar skrivrättigheter",
     "installation.check.error.avatars": "Mappen /assets/avatars saknar skrivrättigheter",
     "installation.check.error.blueprints": "Vänligen lägg till en mapp för /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "En sida med samma webbadress existerar redan",
     "pages.url.error.move": "Tillägget i webbadress kan ej ändras",
     "pages.url.error.rights": "Du kan inte ändra URL:en på denna sidan",
-    "pages.url.home.error.error": "URL:en för hem- och felsidor kan inte ändras",
     "pages.template.select.label": "Mall",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
