--- a/app/translations/tr/core.json
+++ b/app/translations/tr/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby kurulum aşamasında belirtilen sorunla karşılaştı…",
     "installation.check.retry": "Tekrar Dene",
     "installation.check.error": "Bazı sorunlar mevcut!",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts klasörü yazılabilir değil",
     "installation.check.error.avatars": "/assets/avatars klasörü yazılabilir değil",
     "installation.check.error.blueprints": "Lütfen şu klasörü oluşturun : /site/blueprints",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "Bir sayfa hali hazırda aynı web adres-uzantısına sahip",
     "pages.url.error.move": "Web adres-uzantısı değiştirilemedi",
     "pages.url.error.rights": "Bu sayfanın adresini değiştirilemez",
-    "pages.url.home.error.error": "Anasayfa ve hata sayfalarının adresleri değiştirilemez",
     "pages.template.select.label": "Şablon",
     "pages.template.warning.text": "Şablonu değiştirdiğinizde ilgili alanlar da güncellenecek",
     "pages.template.warning.removed": "Kaldırılan alanlar",
