--- a/app/translations/zh_CN/core.json
+++ b/app/translations/zh_CN/core.json
@@ -19,6 +19,7 @@
     "installation.check.text": "Kirby在安装过程中遇到以下问题...",
     "installation.check.retry": "重试",
     "installation.check.error": "存在一些问题！",
+    "installation.check.error.allowed": "You are only allowed to run the panel installer on a local machine or by setting the option panel.install to true in your /site/config/config.php",
     "installation.check.error.accounts": "/site/accounts不可写入",
     "installation.check.error.avatars": "/assets/avatars不可写入",
     "installation.check.error.blueprints": "请新增/site/blueprints文件夹",
@@ -103,7 +104,6 @@
     "pages.url.error.exists": "含有相同后缀的页面已存在",
     "pages.url.error.move": "该后缀不能被修改",
     "pages.url.error.rights": "您不能更改该页面的URL",
-    "pages.url.home.error.error": "home页面和error页面的URL不能更改",
     "pages.template.select.label": "模版",
     "pages.template.warning.text": "The following fields will change, when you switch the template",
     "pages.template.warning.removed": "Removed fields",
