--- a/app/translations/nl/core.json
+++ b/app/translations/nl/core.json
@@ -272,6 +272,7 @@
     "fields.structure.add.first": "Voeg het eerste item toe",
     "fields.structure.empty": "Nog geen items.",
     "fields.structure.entry.error": "Item kon niet gevonden worden",
+    "fields.structure.max.error": "No new items allowed or field is readonly",
     "fields.structure.cancel": "Annuleren",
     "fields.structure.save": "OK",
     "fields.structure.edit": "Wijzigen",
