Update Dutch translation

--- a/app/translations/nl/core.json
+++ b/app/translations/nl/core.json
@@ -174,7 +174,7 @@
     "files.delete.headline": "Wil je dit bestand verwijderen?",
     "files.error.missing.page": "De pagina kan niet worden gevonden",
     "files.error.missing.file": "Het bestand kan niet worden gevonden",
-    "users": "Users",
+    "users": "Gebruikers",
     "users.index.headline": "Alle gebruikers",
     "users.index.add": "Nieuwe gebruiker toevoegen",
     "users.index.edit": "Wijzigen",
