--- a/app/translations/en/core.json
+++ b/app/translations/en/core.json
@@ -307,6 +307,7 @@
     "editor.image.empty": "This page has no images",
     "autocomplete.method.error": "Invalid autocomplete method",
     "blueprints.error.default.missing": "Missing default blueprint",
+    "permissions.error": "You are not allowed to do this",
     "error": "Error",
     "error.headline": "Error"
 }
