Improved error message

--- a/app/translations/en/core.json
+++ b/app/translations/en/core.json
@@ -309,7 +309,7 @@
     "editor.image.empty": "This page has no images",
     "autocomplete.method.error": "Invalid autocomplete method",
     "blueprints.error.default.missing": "Missing default blueprint",
-    "blueprints.error.missing.logic.array": "Since Kirby 2.5, PHP blueprints (with the .php extension) are expected to return an array. PHP files that output YAML are no longer supported.",
+    "blueprints.error.missing.logic.array": "Since Kirby 2.5, PHP blueprints (with the .php extension) are expected to return an array. PHP files that output YAML are no longer supported. If your blueprints contain YAML, simple rename them from *.php to *.yml",
     "permissions.error": "You are not allowed to do this",
     "error": "Error",
     "error.headline": "Error"
