--- a/app/translations/es_ES/core.json
+++ b/app/translations/es_ES/core.json
@@ -32,14 +32,14 @@
     "installation.signup.password.label": "Contraseña",
     "installation.signup.language.label": "Idioma",
     "installation.signup.button": "Crear cuenta",
-    "login": "Log in",
-    "login.welcome": "Please log in with your new account",
+    "login": "Iniciar sesión",
+    "login.welcome": "Por favor inicia sesión con tu nueva cuenta",
     "login.username.label": "Nombre de usuario",
     "login.password.label": "Contraseña",
     "login.error": "Nombre de usuario o contraseña incorrecto",
-    "login.button": "Log in",
+    "login.button": "Iniciar sesión",
     "login.log.error.permissions": "El archivo de logs de inicios de sesión no tiene permisos de escritura",
-    "logout": "Log out",
+    "logout": "Cerrar sesión",
     "topbar.error.class.definition": "Falta la definición de topbar para la clase:",
     "dashboard": "Tablero",
     "dashboard.index.pages.title": "Páginas",
