--- a/app/translations/es_419/core.json
+++ b/app/translations/es_419/core.json
@@ -32,14 +32,14 @@
     "installation.signup.password.label": "Contraseña",
     "installation.signup.language.label": "Idioma",
     "installation.signup.button": "Crear tu cuenta",
-    "login": "Log in",
-    "login.welcome": "Please log in with your new account",
+    "login": "Iniciar sesión",
+    "login.welcome": "Por favor inicia sesión con tu nueva cuenta",
     "login.username.label": "Usuario",
     "login.password.label": "Contraseña",
     "login.error": "Usuario o Contraseña equivocada",
-    "login.button": "Log in",
+    "login.button": "Iniciar sesión",
     "login.log.error.permissions": "El archivo de registro del inicio de sesión no es modificable",
-    "logout": "Log out",
+    "logout": "Cerrar sesión",
     "topbar.error.class.definition": "Falta la definición topbar para la clase:",
     "dashboard": "Inicio",
     "dashboard.index.pages.title": "Páginas",
